--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
 
     <title>Навчальні плани</title>
 
-    <link rel="icon" href="./src/assets/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./static/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Material+Icons" rel="stylesheet">
 		<link rel="stylesheet" href="./src/assets/css/app.css">
 
